# incident-triage-ai

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
docs/: PROJECT_DEMO_PRESENTATION.md
incident_triage_ai/: __init__.py  agent.py  config.py  main.py  models.py
incident_triage_ai/data/: deployments.json  logs.json  metrics.json  runbooks.json
incident_triage_ai/static/: app.js  index.html  styles.css
incident_triage_ai/tools/: __init__.py  observability.py
tests/: test_agent.py
